...
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".module.main.MainActivity" >

        <ListView
            android:id="@+id/list_todo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_above="@+id/btn_add_todo"
            android:onItemClick="@{handlers.onItemClick}"
            android:onItemLongClick="@{handlers.onItemLongClick}"
            app:todoAdapter="@{todoAdapter}" />

        <EditText
            android:id="@+id/edit_new_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/btn_add_todo"
            android:hint="@string/edit_new_todo_hint" />
...
